| Summary: | ASTERISK-26424: app_voicemail: Undocumented behavior from VMSayName | ||
| Reporter: | Eric Smith (EricS) | Labels: | |
| Date Opened: | 2016-09-29 11:04:10 | Date Closed: | 2020-10-01 08:46:16 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_voicemail Documentation |
| Versions: | 14.0.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | VMSayName accepts digits during playback and will jump to the extension entered in the current context. In that respect it acts similar to Background() or WaitExten().
This is not mentioned anywhere in the wiki: https://wiki.asterisk.org/wiki/display/AST/Asterisk+13+Application_VMSayName so this bug could cause unexpected behavior in the dialplan. This actually suits my purposes. If you wrap VMSayName in a subroutine, you can catch all input with extension i and exit out early on interrupt. So naturally, I think it should be left alone and the wiki be updated with this behavior. ;) Thanks! | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-29 11:04:10.587-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-10-04 12:19:37.103-0500 [~EricS] If you'd like to submit a change to add this to the documentation (it's a bit of XML in the code) feel free to. If you have any questions for how to do so just ask and we'll help out. Otherwise I will put this into the queue for our documentation person. By: Friendly Automation (friendly-automation) 2020-10-01 08:46:17.658-0500 Change 15015 merged by Friendly Automation: app_voicemail.c: Document VMSayName interruption behavior [https://gerrit.asterisk.org/c/asterisk/+/15015|https://gerrit.asterisk.org/c/asterisk/+/15015] By: Friendly Automation (friendly-automation) 2020-10-02 08:03:31.687-0500 Change 15023 merged by George Joseph: app_voicemail.c: Document VMSayName interruption behavior [https://gerrit.asterisk.org/c/asterisk/+/15023|https://gerrit.asterisk.org/c/asterisk/+/15023] By: Friendly Automation (friendly-automation) 2020-10-02 08:03:57.170-0500 Change 15014 merged by George Joseph: app_voicemail.c: Document VMSayName interruption behavior [https://gerrit.asterisk.org/c/asterisk/+/15014|https://gerrit.asterisk.org/c/asterisk/+/15014] By: Friendly Automation (friendly-automation) 2020-10-02 08:04:27.187-0500 Change 15017 merged by George Joseph: app_voicemail.c: Document VMSayName interruption behavior [https://gerrit.asterisk.org/c/asterisk/+/15017|https://gerrit.asterisk.org/c/asterisk/+/15017] By: Friendly Automation (friendly-automation) 2020-10-02 12:59:12.616-0500 Change 15016 merged by George Joseph: app_voicemail.c: Document VMSayName interruption behavior [https://gerrit.asterisk.org/c/asterisk/+/15016|https://gerrit.asterisk.org/c/asterisk/+/15016] | ||