app_voicemail.c: Document VMSayName interruption behavior

ASTERISK-26424 #close

Change-Id: I797ad0ed302d0b3d2c90543eff5b7207ed08ecf0